sticky select and alignment fix

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,7 +3,6 @@
     background-color: #FDF6E6;
     color: black;
     padding-left: 5px;
-    height: 100vh;
 }
 
 section{
@@ -12,6 +11,7 @@ section{
 
 .app-content{
     width: auto;
+    height: 90vh;
     display: flex;
     flex-direction: row;
     align-items: center;
